[package]
name = "druid-garden-os"
version = "1.0.1"
edition = "2021"

[lib]
name="druid_garden_os"
path="src/lib.rs"

[[bin]]
name="druid-garden-os"
path="src/main.rs"

[dependencies]
argon2 = { version = "0.5.3"}
bollard = "0.18.1"
dg_edge_updater = { version = "1.0.0" }
dg_fast_farmer = { version = "2.0.2" }
dg_xch_core = { version="2.1.2" }
dg_logger = { version="2.1.2" }
dg_sysfs = { version = "1.1.4"}
dg_network_manager = { version = "1.0.0" }
gpiod = "0.3.0"
home = "0.5.11"
infer = "0.19.0"
log = "0.4.22"
nvml-wrapper = "0.10.0"
portfu = { version = "1.3.3" }
portfu_admin = { version = "1.3.3", features = ["sqlx"]}
portfu_core = { version = "1.3.3"}
portfu_macros = { version = "1.3.3"}
sqlx = { version = "0.8.3", features = ["sqlite", "migrate", "time", "runtime-tokio"]}
tempfile = "3.18.0"
time = {version = "0.3.36", features = ["serde-human-readable", "parsing", "serde"]}
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros", "fs"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
reqwest = {version="0.12.4", default-features = false, features = ["rustls-tls", "json", "stream"] }
rustls = {version = "0.23.27" }
semver = { version = "1.0.26", features = ["serde"]}
serde = { version = "1.0.217", features = ["derive"] }
serde_yaml = "0.9.33"
sha2 = "0.10.8"
sysinfo = "0.35.1"
libc = "0.2.172"